# memmansurvey

./: .gitignore  .gitmodules  BaseCMake.cmake  CMakeLists.txt  README.md  addAlpaka.cmake  addCUB.cmake  create_mm.py  download_and_run.sh  setup.py  testAll.py  testCorrective.py  testFrag.py  testGallatin.py  testGraph.py  testLarge.py  testMallocMC.py  test_alloc.py
frameworks/beta/: CMakeLists.txt  Instance.cuh  main.cu
frameworks/dynasoar/: CMakeLists.txt
frameworks/fdg/: CMakeLists.txt
frameworks/gallatin/: CMakeLists.txt  Instance.cuh
frameworks/mallocMC/: CMakeLists.txt  Instance.cuh  adaptAlpaka.hpp  main.cu
frameworks/regeff/: CMakeLists.txt
install_scripts/: download_and_run.sh  download_and_run_only_gallatin.sh  download_and_run_only_mallocMC.sh  graph_curl.sh  process_for_latex.py  process_results.sh
latex/: defines.tex  eval.tex  includes.tex  main.aux  main.tex
latex/artifact_data/: CUDA-orkut.csv  Gallatin-cit-Patents.csv  Gallatin-orkut.csv  Ouroboros-C-S-cit-Patents.csv  Ouroboros-C-S-orkut.csv  Ouroboros-C-VA-cit-Patents.csv  Ouroboros-C-VA-orkut.csv  Ouroboros-P-S-cit-Patents.csv  Ouroboros-P-S-orkut.csv  Ouroboros-P-VA-cit-Patents.csv  Ouroboros-P-VA-orkut.csv  Ouroboros-P-VL-cit-Patents.csv  Ouroboros-P-VL-orkut.csv  RegEff-AW-orkut.csv  ScatterAlloc-cit-Patents.csv  exp_CUDA-orkut.csv  exp_Gallatin-orkut.csv  exp_Ouroboros-C-S-orkut.csv  exp_Ouroboros-C-VA-orkut.csv  exp_Ouroboros-P-S-orkut.csv  exp_Ouroboros-P-VA-orkut.csv  exp_Ouroboros-P-VL-orkut.csv  exp_RegEff-AW-orkut.csv  frag_1000000_4-4096.csv  init_8.csv  mixed_frag_1000000_4-4096.csv  oom_100000_4-8192.csv  oom_100000_512-512.csv  perf_alloc_1000000_16-4096.csv  perf_free_1000000_16-4096.csv  perf_mixed_alloc_1000000_16-4096.csv  perf_mixed_free_1000000_16-4096.csv  reg.csv  scale_alloc_16_1-1048576.csv  scale_alloc_16_1-268435456.csv  scale_alloc_512_1-1048576.csv  scale_alloc_64_1-1048576.csv  scale_alloc_8192_1-262144.csv  scale_free_16_1-1048576.csv  scale_free_16_1-268435456.csv  (+5 more)
latex/figures/: alloc_perf.tex  alloc_perf_subfigure.tex  frag_figure.tex  frag_subfigure.tex  free_perf.tex  free_perf_subfigure.tex  graph_original_subfigure.tex  graph_plot_subfigure.tex  graph_plots.tex  mixed_alloc.tex  mixed_alloc_subfigure.tex  mixed_frag_subfigure.tex  mixed_free.tex  mixed_free_subfigure.tex  oom.tex  oom_bar.tex  oom_bar_subfigure.tex  oom_graph.tex  oom_subfigures.tex  perf_alloc_1000000_16-4096.csv  plot_data.tex  scale_alloc.tex  scale_alloc_subfigure.tex  scale_free.tex  scale_free_subfigure.tex  subfigure_graph_mixed_frag.tex  subfigurea_all_allocs.tex  subfigures_alloc.tex  subfigures_frag.tex  subfigures_frag_oom.tex  subfigures_graphs.tex  subfigures_mixed_alloc.tex  subfigures_scale.tex  subfigures_scale_both.tex  subfigures_scale_free.tex
latex/figures/scale_subfigs/: alloc_16.tex  alloc_512.tex  alloc_64.tex  alloc_8192.tex  free_16.tex  free_512.tex  free_64.tex  free_8192.tex
scripts/: Helper.py
src/: main.cu
tests/alloc_tests/: CMakeLists.txt  perf_allocation.cu  perf_mixed_allocation.cu  test_allocation.py  test_mixed_allocation.py  test_scaling.py
tests/frag_tests/: CMakeLists.txt  frag_memory_mixed.cu  frag_memory_overhead.cu  setup.py  test_fragmentation.py  test_mixed_fragmentation.py  test_oom.py
tests/graph_tests/: CMakeLists.txt  big_config_init.json  big_config_update.json  big_config_update_range.json  graph_expansion_test.cu  graph_test.cu  setup.py  test_graph_expansion.py  test_graph_expansion_init.py  test_graph_init.py  test_graph_init_big.py  test_graph_update.py  test_graph_update_big.py  verify_config.json  verify_range_config.json
tests/graph_tests/data/: cit-Patents.mtx  orkut.mtx
tests/graph_tests/include/device/: EdgeUpdate.cuh
tests/synth_tests/: CMakeLists.txt  synth_init.cu  synth_workgeneration.cu  test_registers.cu  test_registers.py  test_synth_init.py  test_synth_workload.py
